# ultimate-bogo

./: .clang-format  .gitignore  Bogo.h  CMakeLists.txt  Makefile  main.cpp  test.cpp
include/: Bogosort.h
